# hiring-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-hirematch.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: requisitions.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  candidate.py  consent.py  evaluation.py  hiring_manager.py  organization.py  recruiter.py  req_candidate.py  requisition.py  user.py
backend/migrations/: env.py
backend/tests/: test_health.py
frontend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  index.html  next.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.tsx  routeTree.gen.ts  styles.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/hirematch/[...path]/: route.ts
frontend/src/app/candidate/: page.tsx
frontend/src/app/hiring/: page.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Candidate.tsx  Hiring.tsx  Home.tsx
frontend/src/routes/: candidate.consent.tsx  candidate.data.tsx  candidate.login.tsx  candidate.profile.tsx  candidate.tsx  index.tsx  recruiter.candidate.$candidateId.tsx  recruiter.dashboard.tsx  recruiter.fingerprint.tsx  recruiter.network.tsx  recruiter.req.$reqId.tsx  recruiter.req.$reqId_.rerank.tsx  recruiter.req.new.tsx  recruiter.tsx
hirematch/: .dockerignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
hirematch/.hermes/plans/: 2026-04-27_0914-hirematch-implementation.md
hirematch/docker/app/: Dockerfile
hirematch/migrations/: env.py
hirematch/migrations/versions/: 0001_initial_schema.py
hirematch/src/: main.py
hirematch/src/api/v1/: candidates.py  jobs.py  matches.py
hirematch/src/core/: auth.py  config.py  db.py
hirematch/src/models/: __init__.py  candidate.py  interview_session.py  job_posting.py  match_score.py
hirematch/src/schemas/: candidate.py  job.py  match.py
hirematch/src/services/: ai_matching.py
hirematch/tests/: conftest.py  test_matching_flow.py
postgres-init/: 01-create-hirematch-db.sh
server/: .env.example  .gitignore  .pre-commit-config.yaml  DELIVERY.md  Makefile  README.md  docker-compose.yml  pyproject.toml
server/docker/app/: Dockerfile
server/docker/db/: init.sql
server/observability/: alerting.py  logging.py  metrics.py  tracing.py
server/observability/tests/: test_observability.py
server/orchestrator/: errors.py  router.py  state.py
server/orchestrator/tests/: test_matching_flow.py
server/orchestrator/workflows/: ingestion_flow.py  matching_flow.py
server/scripts/: migrate.py
server/services/feedback_agent/: main.py  tracker.py  weights.py
server/services/feedback_agent/tests/: test_feedback.py
server/services/gdpr_agent/: auditor.py  consent.py  deletion.py  enforcer.py  filter.py  main.py
server/services/gdpr_agent/tests/: test_enforcer.py  test_gdpr.py
server/services/job_agent/: extractor.py  main.py
server/services/job_agent/tests/: test_job_extractor.py
server/services/matching_agent/: main.py  matcher.py
server/services/matching_agent/tests/: test_matcher.py
server/services/profile_agent/: extractor.py  main.py
server/services/profile_agent/tests/: test_profile_extractor.py
server/src/: main.py
server/src/config/: settings.py
server/src/db/: connection.py  engine.py  models.py  repositories.py
server/src/db/repositories/: __init__.py  audit_repo.py  candidate_repo.py  job_repo.py  match_repo.py
server/src/schemas/: __init__.py  base.py  gdpr.py  job.py  match.py  profile.py
server/tests/: test_schemas.py
