[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiring-assistant-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # Task queue
    "redis>=5.0",
    "rq>=1.16",
    # AI / LLM
    "anthropic>=0.40",
    "openai>=1.50",
    # File processing
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    # Storage (R2 is S3-compatible)
    "boto3>=1.34",
    # Auth
    "PyJWT>=2.8",
    "cryptography>=42",
    # Observability
    "sentry-sdk[fastapi]>=2.0",
    "structlog>=24.0",
    "langfuse>=2.0",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    # Config
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-redis>=4.6",
    "factory-boy>=3.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.hatch.build.targets.wheel]
packages = ["app"]
