[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hirematch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # Config
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    # AI
    "anthropic>=0.40",
    # Auth
    "PyJWT>=2.8",
    "cryptography>=42",
    # Observability
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.hatch.build.targets.wheel]
packages = ["src"]
